app/assets/stylesheets/config/_colors.scss
// Define variables for your color scheme

// For example:
$red: #FD1015;
$blue: #167FFB;
$yellow: #FFC65A;
$orange: #E67E22;
$green: #1EDD88;
$gray: #0E0000;
$light-gray: #F4F4F4;

// CUSTOM COLORS
$ct-primary: #9B51E0;
$ct-primary-light: #B478F8;
$ct-primary-dark: #7033B3;

$ct-dark: #212131;
$ct-dark-medium: #5D5D69;

$ct-light: #F2F5F7;

$ct-success: #65A726;
$success-light: #D5EE7C;

$ct-danger: #DB0F00;
$ct-danger-light: #ffbbbb;

$ct-yellow: #FFC522;
$ct-yellow-contrast:#FFD05C;


$ct-bg-global: #1b002c;










.ct-text-light {
  opacity: .7;
}

